<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_datetime_2_x"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:cardBackgroundColor="#E6E6E6"
                card_view:cardCornerRadius="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="InvalidId,MissingConstraints">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/datetime_layout_txt_2_x"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:layout_margin="8dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttxt_dt_2_x"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:inputType="datetime"
                        android:imeOptions="actionDone"
                        android:clickable="true"
                        android:hint="@string/date_time"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="To"/>
            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_datetime_2_y"
                android:layout_width="135dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:cardBackgroundColor="#E6E6E6"
                card_view:cardCornerRadius="10dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="InvalidId,MissingConstraints">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/datetime_layout_txt_2_y"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:layout_margin="8dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edttxt_dt_2_y"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:inputType="datetime"
                        android:imeOptions="actionDone"
                        android:clickable="true"
                        android:hint="@string/date_time"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_datetime_2_submit"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:cardBackgroundColor="@android:color/black"
                card_view:cardCornerRadius="8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                tools:ignore="InvalidId,MissingConstraints">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:text="OK"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="@id/card_datetime_2_submit"
            app:layout_constraintStart_toStartOf="@id/card_datetime_2_submit"
            app:layout_constraintTop_toTopOf="@id/card_datetime_2_submit">
            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                android:orientation="horizontal"
                android:stretchColumns="*">
                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/text_logProvisioningid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:text="@string/id"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/text_logProvisioningTimestamp"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/text_logProvisioningTimestamp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:text="@string/timestamp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/text_logProvisioningCustName"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/text_logProvisioningCustName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:text="@string/customer_name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/text_logProvsisoningCustAddr"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/text_logProvsisoningCustAddr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:text="@string/customer_address"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@id/text_logProvisioningStatus"
                            app:layout_constraintTop_toTopOf="parent" />
                        <TextView
                            android:id="@+id/text_logProvisioningStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:text="@string/status"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </LinearLayout>
                </TableRow>
                <TableRow
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recylcerViewLogProvisioning"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:onClick="onClick1"
                        tools:layout_editor_absoluteX="745dp"
                        tools:layout_editor_absoluteY="-51dp"
                        tools:ignore="OnClick" />
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>